--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.solitare2114"
+    package="com.example.solitare4g"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -9,8 +9,8 @@
         android:targetSdkVersion="19" />
     
     <instrumentation
-        android:targetPackage="cs2114.restaurant"
-        android:name="android.test.InstrumentationTestRunner"/>
+        android:targetPackage="solitare4g"
+        android:name="android.test.solitare4g"/>
 
     <application
         android:allowBackup="true"
